    \item Add test cases for the (rather difficult) case of predicted
    survival for multi-state coxph model that has shared hazards
    \item nsk(..., Boundary.knots=FALSE) was not being handled properly.
    \item Fix error in terms.inner; it failed for a function with no
    arguments. Pointed out by Daniel Sjberg and Duncan Murdoch.
    \item Remove Sint from C code.
}}

\section{Changes in version 3.3-1}{
  \itemize{
    \item Update the saved tests/Examples/survival-Ex.Rout.save file so
    as to remove timings, at the behest of CRAN.  (Footnote 21 in the
    packages manual talks about this.)
}}
\section{Changes in version 3.3-0}{
  \itemize{
    \item Change any calls to Calloc or Free in the C code to R_Calloc
    and R_Free, at the request of R core.
    \item Fix an oversight in aareg: when coxph and survreg were
    converted from using +cluster() in a formula to cluster as an
    argument, that same change needed to be made in aareg.  Pointed out
    by zdgager.
    \item The std of the cumulative hazard is now present, for select
    cases of a coxph model curve.  More work remains to be done to
    return the std for all cases.
    \item Add a paragraph to the help page for survfit.Rd, pointing out
    that robust variance is now the default for interval censored data,
    and why.
    \item Add the median.survfit method
    \item Improve the examples in pseudo.Rd
    \item Fix error in survreg.distributions$gaussian$deviance. The
    deviance of an interval censored observation was NA due to a sign
    that was backwards, leading to log of a negative value.  (Simple
    typo.)
    \item Error in predict.coxph: it would fail for a model that had two
    strata terms. Reported by Hanna Frick.
    \item Fix github issue 130. If newdata contained the strata
    information, and there was only one curve requested, survfit.coxph
    would return too many curves.
}}

\section{Changes in version 3.2-15}{
  \itemize{