@@ -57,7 +57,7 @@ The formula recurrs on the left and right side of +*: and \%in\%, and on
 binary - (but not on unary -).
 <<parsecovar>>=
 rightslash <- function(x) {
-    if (class(x) != 'call') return(x)
+    if (!inherits(x, 'call')) return(x)
     else {
         if (x[[1]] == as.name('/')) return(list(x[[2]], x[[3]]))
         else if (x[[1]]==as.name('+') || (x[[1]]==as.name('-') && length(x)==3)||
