@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2016-03-23 r70368) -- "Unsuffered Consequences"
-Copyright (C) 2016 The R Foundation for Statistical Computing
-Platform: i686-pc-linux-gnu (32-bit)
+R Under development (unstable) (2022-07-22 r82614) -- "Unsuffered Consequences"
+Copyright (C) 2022 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -32,13 +32,10 @@ Type 'q()' to quit R.
 +                     event=c(1, 1, 1, 1, 1, 1, 1, 0, 0, 0),
 +                     x    =c(1, 0, 0, 1, 0, 1, 1, 1, 0, 0) )
 > 
-> zz <- rep(0, nrow(test1))
+> zz <- zz2 <- rep(0, nrow(test1))
 > tfit1 <- coxph(Surv(time,status) ~x, test1, eps=1e-7)
 > tfit2 <- coxph(Surv(time,status) ~x + frailty(zz, theta=0, sparse=T), test1)
-> tfit3 <- coxph(Surv(zz,time,status) ~x + frailty(zz, theta=0, sparse=T), test1)
-Warning message:
-In coxph(Surv(zz, time, status) ~ x + frailty(zz, theta = 0, sparse = T),  :
-  a variable appears on both the left and right sides of the formula
+> tfit3 <- coxph(Surv(zz,time,status) ~x + frailty(zz2, theta=0, sparse=T), test1)
 > 
 > temp <- c('coefficients', 'var', 'loglik', 'linear.predictors',
 + 	  'means', 'n', 'concordance')
@@ -63,15 +60,12 @@ In coxph(Surv(zz, time, status) ~ x + frailty(zz, theta = 0, sparse = T),  :
 > #
 > test3 <- rbind(test1, test1)
 > test3$x2 <- rep(1:2, rep(nrow(test1),2))
-> zz <- rep(0, nrow(test3))
+> zz <- zz2 <- rep(0, nrow(test3))
 > tfit1 <- coxph(Surv(time,status) ~x + strata(x2), test3, eps=1e-7)
 > tfit2 <- coxph(Surv(time,status) ~x + frailty(zz, theta=0, sparse=T)
 + 	       + strata(x2), test3)
-> tfit3 <- coxph(Surv(zz,time,status) ~x + frailty(zz, theta=0, sparse=T)
+> tfit3 <- coxph(Surv(zz,time,status) ~x + frailty(zz2, theta=0, sparse=T)
 + 	         + strata(x2), test3)
-Warning message:
-In coxph(Surv(zz, time, status) ~ x + frailty(zz, theta = 0, sparse = T) +  :
-  a variable appears on both the left and right sides of the formula
 > 
 > all.equal(tfit1[temp], tfit2[temp])
 [1] TRUE
@@ -88,8 +82,8 @@ In coxph(Surv(zz, time, status) ~ x + frailty(zz, theta = 0, sparse = T) +  :
 > all.equal(tfit1[temp], tfit2[temp])
 [1] TRUE
 > 
-> rm(test3, test4, tfit1, tfit2, tfit3, temp, zz)
+> rm(test3, test4, tfit1, tfit2, tfit3, temp, zz, zz2)
 > 
 > proc.time()
    user  system elapsed 
-  0.308   0.024   0.325 
+  1.002   0.057   1.051 
